build for paper 1.21.10